tests/fixtures/compile_errors/duplicate_contract_in_module.fe
contract Foo:

    pub def bar():
        pass

contract Foo:

    pub def bar():
        pass
